--- a/01. Introduction to Marketing/1.4.1 Brand Messaging & Communication.md
+++ b/01. Introduction to Marketing/1.4.1 Brand Messaging & Communication.md
@@ -1,28 +1,52 @@
 ## Brand Messaging & Communication
 
-本课程模块聚焦**品牌传播与消费者感知**，由Kahn教授解析消费者如何通过感知形成对品牌的认知，以及品牌策略如何影响其行为。核心内容如下：  
+品牌传播与消费者感知
 
-1. **感知的本质与偏见**  
-   - 感知是消费者对刺激（如广告、包装）的**主观解释**，直接影响其行为，但未必反映真实情况。  
-   - 感知过程分三个阶段：**暴露→注意→解释**，每个阶段均存在偏见：  
-     - **选择性暴露**：消费者倾向于接触符合自身信念的信息（如避开“不安全”区域）。  
-     - **选择性注意**：仅关注与自身相关的刺激（如超市货架上的熟悉品牌）。  
-     - **解释偏差**：基于已有信念解读信息（如政党支持者对同一辩论的不同评价）。  
-
-2. **感知的自动性与不可控性**  
-   - **Stroop测试**证明：即使意识到矛盾（如文字与颜色不匹配），消费者仍难以抑制初始感知反应。类似地，品牌名称（如可口可乐）会**自动触发**对质量、价格的预设判断，即使产品本身无差异。  
-   - **视觉错觉与邻近性偏见**：物理距离或外观相似性会误导消费者认为产品关联（如沙拉酱靠近蔬菜区暗示搭配性）。  
-
-3. **品牌力量的实证**  
-   - **品牌资产价值**：可口可乐品牌估值700亿美元，仅凭品牌名即可提高消费者支付溢价意愿（如健怡可乐的成功）。  
-   - **品牌延伸策略**：利用品牌信任推出新产品（如无糖饮料），消费者会默认其品质优越，降低市场教育成本。  
+#### 1. 消费者感知的核心作用
+- **感知的定义**：消费者对营销刺激（如广告、包装）的**主观解读过程**，直接影响其后续行为。
+- **关键洞察**：  
+  - 消费者感知 ≠ 客观事实，而是基于**选择性暴露、选择性注意、主观解释**的建构过程。  
+  - 感知的偏差是**自动且难以抑制**的（如Stroop测试所示），即使消费者意识到偏差，也难以完全控制反应。
 
 ---
 
-### 关键结论  
-1. **消费者感知≠客观事实**：品牌需通过策略性传播（如广告、包装设计）主动塑造消费者认知，而非依赖产品本身特性。  
-2. **偏见是双刃剑**：  
-   - **挑战**：消费者可能因偏见忽视品牌信息（如选择性暴露）。  
-   - **机遇**：利用邻近性、相似性等感知规律（如模仿知名品牌设计）可快速建立信任。  
-3. **品牌是核心资产**：强品牌能直接提升产品溢价能力与市场接受度，品牌延伸需谨慎维护核心价值一致性。  
-4. **不可控的自动反应**：消费者对品牌标识、颜色等元素的感知反应难以通过理性说服改变，需在设计中预判其心理影响。
+#### 2. 感知形成的三阶段及偏误
+1. **暴露（Exposure）**：  
+   - 消费者倾向于接触符合其现有信念的信息（例：避免去自认为不安全的区域）。  
+   - **选择性暴露**导致信息茧房，阻碍新数据的获取。  
+
+2. **注意（Attention）**：  
+   - 分为**自愿注意**（主动关注）和**非自愿注意**（如巨大声响引发的本能反应）。  
+   - 注意力资源有限，营销需通过**突出信号**（如颜色、对比）抢占关注。  
+
+3. **解释（Interpretation）**：  
+   - 消费者基于**先验信念**解读信息（例：政党支持者对同一辩论的相反解读）。  
+   - 视觉与语义线索（如品牌名、产品形状）会**自动触发联想**（例：牛粪形状的巧克力引发厌恶感）。
+
+---
+
+#### 3. 影响感知的常见偏误
+- **接近偏误（Proximity Bias）**：  
+  物理距离近的事物被视为相关或相似（例：超市将沙拉酱与蔬菜摆放在一起，暗示搭配性）。  
+- **相似偏误（Similarity Bias）**：  
+  外观相似的产品被认为质量相同（例：自有品牌模仿知名品牌包装，利用消费者对质量的联想）。  
+- **品牌效应（Brand Effect）**：  
+  品牌名称直接影响产品感知（例：贴有“可口可乐”标签的饮料被认为更好喝、更值高价）。
+
+---
+
+#### 4. 品牌传播的实践启示
+- **品牌资产的威力**：  
+  品牌名称本身是核心资产（例：可口可乐品牌价值达700亿美元），能赋予新产品**即时可信度**（如1982年“健怡可乐”的推出）。  
+- **感官线索的设计**：  
+  - 颜色、形状、包装等感官元素需与品牌调性一致，避免认知冲突（例：巧克力形状引发负面联想）。  
+  - 利用视觉错觉（如等长线条的错视）强化消费者对产品优势的感知。  
+- **品牌延伸策略**：  
+  利用现有品牌声誉推出新产品（如Diet Coke），可降低市场教育成本，快速建立消费者信任。
+
+---
+
+#### 关键结论
+- **消费者行为本质**：感知驱动行为，而非客观事实。  
+- **营销核心任务**：通过**控制暴露场景、设计感官信号、管理品牌联想**，主动塑造消费者感知。  
+- **品牌价值杠杆**：品牌是消费者决策的“快捷方式”，企业可通过品牌延伸最大化资产价值。
