--- a/02. Introduction to  Financial Accounting/Module 1 Financial Reporting/2.1.2 Financial Reporting Example.md
+++ b/02. Introduction to  Financial Accounting/Module 1 Financial Reporting/2.1.2 Financial Reporting Example.md
@@ -16,23 +16,23 @@
 • **作用**：按活动分类展示现金流动，揭示企业现金来源与用途。
 • **三大分类**：
   1. **经营活动**：与日常业务直接相关（如支付租金、工资，未收到客户现金）。
-     ◦ Dave案例：现金流出$22,000（租金$12,000 + 工资$10,000）。
+     ◦ Dave案例：现金流出$22,000（租金\$12,000 + 工资\$10,000）。
   2. **投资活动**：长期资产购置或处置（如购买卡车）。
-     ◦ Dave案例：现金流出$100,000（购车支出）。
+     ◦ Dave案例：现金流出\$100,000（购车支出）。
   3. **融资活动**：资本筹集或偿还（如发行股票、借款）。
-     ◦ Dave案例：现金流入$130,000（发股$50,000 + 借款$80,000）。
-• **总结**：净现金流$8,000，但无法单独判断经营绩效。
+     ◦ Dave案例：现金流入\$130,000（发股\$50,000 + 借款\$80,000）。
+• **总结**：净现金流\$8,000，但无法单独判断经营绩效。
 
 ---
 
 ### 3. 利润表（Income Statement）
 • **权责发生制原则**：
   • **收入确认**：服务完成即确认（即使未收现金）。  
-    ◦ Dave案例：确认$40,000收入（运输服务已完成，客户30天内付款）。
+    ◦ Dave案例：确认\$40,000收入（运输服务已完成，客户30天内付款）。
   • **费用匹配**：资源消耗与收入期间对应。  
-    ◦ **卡车折旧**：成本$100,000，残值$4,000，按48个月分摊，12月折旧$2,000。  
-    ◦ **预付租金**：$12,000预付1年租金，12月费用$1,000（剩余$11,000为资产“预付费用”）。
-    ◦ **工资费用**：$10,000全部计入当期。
+    ◦ **卡车折旧**：成本\$100,000，残值\$4,000，按48个月分摊，12月折旧\$2,000。  
+    ◦ **预付租金**：\$12,000预付1年租金，12月费用\$1,000（剩余\$11,000为资产“预付费用”）。
+    ◦ **工资费用**：\$10,000全部计入当期。
 • **净利润计算**：  
   \[
   \text{收入}（\$40,000） - \text{费用}（\$2,000 + \$1,000 + \$10,000） = \$27,000
@@ -44,23 +44,23 @@
 ### 4. 资产负债表（Balance Sheet）
 • **作用**：特定时点（如12月31日）企业资源与义务的快照。
 • **资产（Resources）**：
-  • **现金**：$8,000  
-  • **应收账款**：$40,000（客户欠款）  
-  • **预付租金**：$11,000（剩余11个月使用权）  
-  • **卡车净值**：$98,000（原值$100,000 - 累计折旧$2,000）  
-  • **总资产**：$157,000
+  • **现金**：\$8,000  
+  • **应收账款**：\$40,000（客户欠款）  
+  • **预付租金**：\$11,000（剩余11个月使用权）  
+  • **卡车净值**：\$98,000（原值\$100,000 - 累计折旧$2,000）  
+  • **总资产**：\$157,000
 • **负债与股东权益（Obligations）**：
-  • **银行借款**：$80,000（负债）  
-  • **普通股**：$50,000（股东投入）  
-  • **留存收益**：$27,000（累计净利润）  
-  • **总负债与权益**：$157,000（资产 = 负债 + 股东权益）
+  • **银行借款**：\$80,000（负债）  
+  • **普通股**：\$50,000（股东投入）  
+  • **留存收益**：\$27,000（累计净利润）  
+  • **总负债与权益**：\$157,000（资产 = 负债 + 股东权益）
 • **关键启示**：资产负债表体现企业财务健康度，需关注资产流动性（如应收账款回收风险）与偿债能力。
 
 ---
 
 ### 5. 财务报表的互补性
 • **现金流量表**：揭示现金实际流动，警惕“现金耗尽”风险（如Dave经营现金流为负）。  
-• **利润表**：衡量经营效率与定价策略，预测未来盈利潜力（如Dave净利润$27,000）。  
+• **利润表**：衡量经营效率与定价策略，预测未来盈利潜力（如Dave净利润\$27,000）。  
 • **资产负债表**：评估企业资源结构与财务稳定性（如高负债可能增加破产风险）。  
 • **综合使用**：三者缺一不可，需结合分析（如利润高但现金短缺可能因应收账款积压）。
 
